--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,10 @@ services:
       context: ./assignment2
     depends_on:
       - assignment-1
+
+  assignment-3:
+    build:
+      dockerfile: Dockerfile
+      context: ./assignment3
+    depends_on:
+      - assignment-2
